--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
+<script src="https://kit.fontawesome.com/1a222b471a.js" crossorigin="anonymous"></script>
+<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 <body>
-<!-- <div class="download-btn">
-<a href="#" target="_blank">Télécharger mon CV</a>
-</div> -->
+<div class="download-btn">
+<!-- <a href="#" target="_blank">Télécharger mon CV</a> -->
+<div class="icons">
+  <ul>
+    <li><i class="fa fa-facebook"></i></li>
+    <li><i class="fa fa-whatsapp"></i></li>
+    <li><i class="fa fa-instagram"></i></li>
+    <li><i class="fa fa-envelope"></i></li>
+  </ul>
+</div>
+</div>
 <div class="scroll-up-btn">
 <i class="fas fa-angle-up"></i>
 </div>
@@ -56,7 +65,7 @@
 <a href="#">Engagez moi!</a>
 </div>
 </div>
-<img class="profile" src="images/nouha.jpg" alt="Nouha Dianko BADJI">
+<!-- <img class="profile" src="images/nouha.jpg" alt="Nouha Dianko BADJI"> -->
 </section>
 
 <section class="about" id="a propos">
@@ -117,79 +126,82 @@
 <div class="max-width">
 <h2 class="title">Mes competances</h2>
 <div class="skills-content">
+  
 <div class="column right">
-  <div class="bars">
-    <div class="info">
-    <span>HTML</span>
-    <span>90%</span>
-    </div>
-    <div class="line html"></div>
-    </div>
     <div class="bars">
     <div class="info">
-    <span>CSS</span>
-    <span>80%</span>
-    </div>
-    <div class="line css"></div>
-    </div>
-    <div class="bars">
-    <div class="info">
-    <span>JavaScript</span>
+      <span class="iconify" data-icon="file-icons:adobe-illustrator" data-inline="false" ></span>
     <span>60%</span>
     </div>
-    <div class="line js"></div>
+    <div class="line ill"></div>
     </div>
     <div class="bars">
     <div class="info">
-    <span>PHP</span>
-    <span>50%</span>
+    <span class="iconify" data-icon="file-icons:adobe-xd" data-inline="false"></span>
+    <span>70%</span>
     </div>
-    <div class="line php"></div>
+    <div class="line xd"></div>
     </div>
     <div class="bars">
     <div class="info">
-    <span>MySQL</span>
-    <span>50%</span>
+      <span class="iconify" data-icon="file-icons:microsoft-word" data-inline="false"></span>
+    <span>90%</span>
     </div>
-    <div class="line mysql"></div>
+    <div class="line word"></div>
     </div>
+    <div class="bars">
+    <div class="info">
+      <span class="iconify" data-icon="file-icons:microsoft-excel" data-inline="false"></span>
+    <span>60%</span>
+    </div>
+    <div class="line excel"></div>
+    </div>
+    <div class="bars">
+      <div class="info">
+        <span class="iconify" data-icon="file-icons:microsoft-powerpoint" data-inline="false"></span>
+      <span>80%</span>
+      </div>
+      <div class="line powerpoint"></div>
+      </div>
 </div>
+
+
 <div class="column right">
 <div class="bars">
 <div class="info">
-<span>HTML</span>
+<span><i class="fab fa-html5"></i></span>
 <span>90%</span>
 </div>
 <div class="line html"></div>
 </div>
 <div class="bars">
 <div class="info">
-<span>CSS</span>
+<span><i class="fab fa-css3-alt"></i></span>
 <span>80%</span>
 </div>
 <div class="line css"></div>
 </div>
 <div class="bars">
 <div class="info">
-<span>JavaScript</span>
+<span><i class="fab fa-js"></i></span>
 <span>60%</span>
 </div>
 <div class="line js"></div>
 </div>
 <div class="bars">
 <div class="info">
-<span>PHP</span>
+<span><i class="fab fa-php"></i></span>
 <span>50%</span>
 </div>
 <div class="line php"></div>
 </div>
 <div class="bars">
-<div class="info">
-<span>MySQL</span>
-<span>50%</span>
-</div>
-<div class="line mysql"></div>
-</div>
+  <div class="info">
+  <span class="iconify" data-icon="file-icons:adobe-photoshop" data-inline="false"></span>
+  <span>70%</span>
+  </div>
+  <div class="line ps"></div>
+  </div>
 </div>
 </div>
 </div>
@@ -296,7 +308,7 @@
 </section>
 
 <footer>
-<span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+<span>Créer par <a href="#">DianksCodeur</a> | <span class="far fa-copyright"></span> 2021 Tout droit est réservé.</span>
 </footer>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/script.js"></script>
 </body>
